<resources>
    <string name="app_name">PWManager</string>
    <string name="login_text">LOGIN</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="show_password_text">Show Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="new_user_text">New User?</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_address_hint">Email Address</string>
</resources>
